# aoc_2024

./: .gitignore  aoc2024-haskell.cabal
exe/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs
src/: Split.hs
